--- a/backend/package.json
+++ b/backend/package.json
@@ -96,8 +96,11 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
     "eslint": "^9.15.0",
     "eslint-plugin-prettier": "^5.5.0",
+    "globals": "^16.3.0",
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.4.2",
