feat(ai-mission): Implement AI Mission orchestration module
🎯 Overview:
- Added a new module for AI mission orchestration to enhance agent capabilities.
- Introduced the AIMission model with relevant fields for tracking and managing AI missions.

🔧 Key Changes:
1. Created `AIMission` model in Prisma schema with fields for mission type, primary agent, involved agents, status, and more.
2. Defined enums for `MissionType`, `AgentType`, and `MissionStatus` to categorize missions and agents effectively.
3. Updated the User model to include a relation for created AI missions.

📊 Impact:
- This module will facilitate the orchestration of AI agents, allowing for complex mission management and tracking.
- Enhances the backend capabilities to support future AI-driven features.

🚀 Next Steps:
- Integrate this module with the existing backend services and ensure proper API endpoints for mission management.

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,8 @@
   DATABASE_URL="postgresql://kevinp:JSgrjv96urOpJkMyvHqZWm14dgHEMUAH@localhost:5432/gamifier_local?schema=public"
   JWT_SECRET="cop-2025-july03"
   REDIS_URL="redis://localhost:6379"
+
+# N8N Configuration for AI Agents Orchestration
+N8N_MASTER_WEBHOOK_URL="https://your-n8n-instance.com/webhook/ai-agents-master"
+N8N_API_KEY="your-n8n-api-key-here"
+BACKEND_URL="http://localhost:3002"
