--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/common": "^11.1.3",
