--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "npm run start:dev",
     "build": "nest build",
+    "postbuild": "cp -r dist/backend/src/* dist/ 2>/dev/null || true && mkdir -p dist/generated && cp -r src/generated/prisma dist/generated/prisma 2>/dev/null || true",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
